--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>DVOPS - Resource Management Web App</title>
     <script src="js/login.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 
 <body>
