--- a/public/home.html
+++ b/public/home.html
@@ -41,8 +41,8 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <label for="name">Resource Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter resource name">
+                            <label for="name">Food Store</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter Food Place">
                         </div>
                         <div class="form-group">
                             <label for="location">Location</label>
@@ -52,6 +52,11 @@
                             <label for="description">Description</label>
                             <input type="text" class="form-control" id="description"
                                 placeholder="Enter short description">
+                        </div>
+                        <div class="form-group">
+                            <label for="description">Ratings</label>
+                            <input type="text" class="form-control" id="rating"
+                                placeholder="Enter a small rating">
                         </div>
                         <p align="right" id="message" class=""></p>
                         Page 23
