Added ratings into the homepage

--- a/public/home.html
+++ b/public/home.html
@@ -56,10 +56,9 @@
                         <div class="form-group">
                             <label for="description">Ratings</label>
                             <input type="text" class="form-control" id="rating"
-                                placeholder="Enter a small rating">
+                                placeholder="Enter a rating">
                         </div>
                         <p align="right" id="message" class=""></p>
-                        Page 23
                     </form>
                 </div>
                 <div class="modal-footer">
