--- a/public/view.html
+++ b/public/view.html
@@ -26,6 +26,7 @@
                             <th>Name</th>
                             <th>Location</th>
                             <th>Description</th>
+                            <th>Ratings</th>
                             <th>Owner</th>
                             <th></th>
                         </tr>
