--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body onload="viewResources()">
     <div class="container mt-5">
         <div class="row justify-content-center">
             <img src="images/logo.png">
@@ -24,6 +24,27 @@
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resourceModal">
                     Add Resource
                 </button>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <table class="table table-striped table-striped-custom">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Location</th>
+                            <th>Description</th>
+                            <th>Owner</th>
+                            <th>Ratings</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody id="tableContent">
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -55,8 +76,7 @@
                         </div>
                         <div class="form-group">
                             <label for="description">Ratings</label>
-                            <input type="text" class="form-control" id="rating"
-                                placeholder="Enter a rating">
+                            <input type="text" class="form-control" id="rating" placeholder="Enter a rating">
                         </div>
                         <p align="right" id="message" class=""></p>
                     </form>
