--- a/public/home.html
+++ b/public/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body onload="viewResources()">
     <div class="container mt-5">
         <div class="row justify-content-center">
             <img src="images/logo.png">
@@ -37,6 +37,26 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
+                </div>
+                <div class="container mt-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-12">
+                            <table class="table table-striped table-striped-custom">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Location</th>
+                                        <th>Description</th>
+                                        <th>Owner</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tableContent">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-body">
                     <form>
