--- a/public/home.html
+++ b/public/home.html
@@ -13,14 +13,16 @@
 </head>
 
 <body onload="viewResources()">
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <img src="images/logo.png">
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-md-10">
+    <div class="container mt-3">
+        <div class="row justify-content-between align-items-center">
+            <div class="col-md-6">
+                <img src="images/logo.png">
             </div>
-            <div class="col-md-2">
+            <div class="col-md-4 text-right">
+                <a href="#" class="btn btn-primary ml-2">Profile</a>
+                <a href="index.html" onclick="logout()" class="btn btn-outline-danger ml-2">Logout</a>
+            </div>
+            <div class="col-md-4 text-right">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resourceModal">
                     Add Resource
                 </button>
