beautified the codes, removed unecessary parts

--- a/public/password_reset_sent.html
+++ b/public/password_reset_sent.html
@@ -16,11 +16,10 @@
     <p>An email with instructions to reset your password has been sent to your email address. Please check your inbox.</p>
 
     <script>
-        // JavaScript to show an alert box (Bootstrap alert)
+        // js to show an alert box (Bootstrap alert)
         window.onload = function() {
             alert('An email with instructions to reset your password has been sent to your email address. Please check your inbox.');
-            // Alternatively, you can use Bootstrap modal to show a popup modal
-            // For modal implementation, refer to Bootstrap documentation for modal usage
+            // can use Bootstrap modal to show a nicer popup modal, to be modified for frontend
         };
     </script>
 </body>
