--- a/public/home.html
+++ b/public/home.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" id="updateButton" onclick="">Update Resource</button>
+                    <button type="button" class="btn btn-primary" id="updateButton" onclick="">Update Resources</button>
                 </div>
             </div>
         </div>
