--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                             <p align="center">
                                 <button type="reset" class="btn btn-primary">Reset</button>
                                 <button type="button" class="btn btn-primary" onclick="login()">Login</button>
-                                <button type="button" class="btn btn-primary" onclick="window.location.href = 'forget_password.html'">Forget Password</button>
+                                <button type="button" class="btn btn-primary" onclick="window.location.href = 'forget_password.html'">Forget Passwords</button>
                             </p>
                             <p align="center">
                                 <a href="register.html">New user? Register here</a>
