--- a/public/home.html
+++ b/public/home.html
@@ -24,7 +24,7 @@
             </div>
             <div class="col-md-4 text-right">
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resourceModal">
-                    Add Resource
+                    Add Resourcessss
                 </button>
             </div>
         </div>
