--- a/public/home.html
+++ b/public/home.html
@@ -26,6 +26,7 @@
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resourceModal">
                     Add Resourcessss
                 </button>
+                <p>Testing</p>
             </div>
         </div>
     </div>
